@@ -4,6 +4,7 @@
 # License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 # Note : All ini files need to be saved as UTF-8 - No BOM
 
-DESCMODCUSTOM=This Module allows you to type in HTML using a WYSIWYG editor
-MOD_CUSTOM=mod_custom
-
+MOD_CUSTOM_DESC=This Module allows you to create your own HTML Module using a WYSIWYG editor.
+MOD_CUSTOM=Custom HTML
+MOD_CUSTOM_PREPARE_CONTENT_DESC=Optionally prepare the content with the Joomla Content Plugins.
+MOD_CUSTOM_PREPARE_CONTENT_LABEL=Prepare Content
